<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/compass_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompassActivity">

  <Button
      android:id="@+id/add_location_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="128dp"
      android:onClick="onAddLocationClicked"
      android:text="Add Location"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/compass_cl"
      app:layout_constraintVertical_bias="0.0" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/compass_cl"
      android:layout_width="0dp"
      android:layout_height="411dp"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/compass_N"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:text="@string/n"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintCircle="@+id/compass_face"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_constraintCircleAngle="90"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="81dp" />


    <TextView
        android:id="@+id/compass_E"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:text="@string/e"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintCircle="@+id/compass_face"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintCircleRadius="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_constraintCircleAngle="90"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/compass_W"
        android:layout_width="32sp"
        android:layout_height="32dp"
        android:text="@string/w"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintCircle="@+id/compass_face"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintCircleRadius="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_constraintCircleAngle="90"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/compass_S"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:text="@string/s"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintCircle="@+id/compass_face"
        app:layout_constraintCircleAngle="180"
        app:layout_constraintCircleRadius="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_constraintCircleAngle="90"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="81dp" />

    <ImageView
        android:id="@+id/compass_face"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/compass_face" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>